--- a/web/views/layout.erb
+++ b/web/views/layout.erb
@@ -13,6 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <script src="http://code.shutterstock.com/rickshaw/vendor/d3.v3.js"></script>
+    <script src="http://code.shutterstock.com/rickshaw/rickshaw.js"></script>
   </head>
   <body>
 
