--- a/web/views/partials/main_nav.erb
+++ b/web/views/partials/main_nav.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Discobolo</a>
+          <a class="navbar-brand" href="<%= url_for("")%>">Discobolo</a>
         </div>
         
         <div id="navbar" class="collapse navbar-collapse">
